feat: Pass title also to agentic context within the McpClientGatewayToolHandler